fix the shaded dependencies
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>